# proofpilot-ai

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/api/: README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/ai/: __init__.py  embeddings.py  gemini.py
services/api/app/answers/: __init__.py  citations.py  context.py  contradictions.py  schemas.py
services/api/app/api/: documents.py  evaluations.py  health.py  metrics.py  query.py  query_runs.py  settings.py  workspaces.py
services/api/app/cache/: __init__.py  backends.py  keys.py  policy.py
services/api/app/core/: config.py
services/api/app/db/: base.py  models.py  session.py
services/api/app/evaluation/: __init__.py  (+2 more)
services/api/migrations/: env.py
services/api/tests/: test_ai_settings.py  test_answer_service.py  test_cache_keys.py  test_chunking.py  test_citation_validation.py  test_contradictions.py  test_cors.py  test_database_models.py  test_dependency_health.py  test_document_api.py  test_document_service_indexing.py  test_embedding_index_service.py  test_embeddings.py  test_evaluation_api.py  test_evaluation_metrics.py  test_extractors.py  test_gemini_answer_smoke.py  test_gemini_embedding_smoke.py  test_gemini_provider.py  test_gemini_search_smoke.py  test_gemini_smoke.py  test_generate_api_client.py  test_health.py  test_hybrid_retrieval_service.py  test_infra_integration.py  test_ingestion_queue_integration.py  test_ingestion_worker.py  test_local_session_access.py  test_operational_telemetry.py  test_postgres_keyword_retrieval_integration.py  test_qdrant_integration.py  test_query_api.py  test_query_cache.py  test_query_routing.py  test_query_runs_api.py  test_query_service.py  test_rate_limiting.py  test_rate_limiting_integration.py  test_redis_cache_integration.py  test_request_logging.py  (+5 more)
(+85 files in other folders)
