[project]
name = "proofpilot-api"
version = "0.1.0"
description = "FastAPI backend for ProofPilot AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124.0",
  "httpx>=0.28.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "uvicorn[standard]>=0.38.0"
]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.0"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
