[project]
name = "proofpilot-api"
version = "0.1.0"
description = "FastAPI backend for ProofPilot AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "fastapi>=0.124.0",
  "google-genai>=2.6.0",
  "httpx>=0.28.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "pypdf>=6.12.1",
  "python-multipart>=0.0.29",
  "qdrant-client>=1.18.0",
  "redis>=7.4.0",
  "sqlalchemy>=2.0.49",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "reportlab>=4.5.1",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
